--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,23 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+.skills-list {
+    list-style: none;
+    padding: 0;
+}
+
+.skills-list li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+.skills-list li::before {
+    content: '•';
+    color: #00d8ff; /* Turkusowy kolor kropek */
+    font-size: 24px;
+    margin-right: 10px;
+}
