--- a/styles.css
+++ b/styles.css
@@ -82,11 +82,13 @@ a:hover {
 .skills-list {
     list-style: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .skills-list li {
     display: flex;
-    justify-content: center;
     align-items: center;
     margin: 10px 0;
     font-size: 18px;
